--- a/composer.json
+++ b/composer.json
@@ -1,4 +1,24 @@
 {
+    "name": "anomaly/delta-theme",
+    "type": "streams-addon",
+    "description": "The official theme for PyroCMS.com",
+    "keywords": [
+        "theme",
+        "streams-platform theme"
+    ],
+    "homepage": "http://anomaly.is/",
+    "license": "MIT",
+    "authors": [
+        {
+            "name": "AnomalyLabs, Inc.",
+            "email": "hello@anomaly.is",
+            "homepage": "http://anomaly.is/",
+            "role": "Owner"
+        }
+    ],
+    "support": {
+        "email": "support@anomaly.is"
+    },
     "autoload": {
         "psr-4": {
             "Anomaly\\DeltaTheme\\": "src/"
